# eclipse-ground-station

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: DiscoveryPanel.h  DiscoveryService.h  GamepadController.h  LoggerWidget.h  MainWindow.h  VideoReceiver.h  VideoStream.h  VideoWidget.h
src/: DiscoveryPanel.cpp  DiscoveryService.cpp  GamepadController.cpp  LoggerWidget.cpp  MainWindow.cpp  VideoReceiver.cpp  VideoStream.cpp  VideoWidget.cpp  main.cpp
